# SolanaL2

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: connection.ts  main.ts  renderer.ts  renderer3d.ts  state.ts  transaction.ts
crates/consensus/: Cargo.toml
crates/consensus/src/: broadcast.rs  leader.rs  lib.rs  types.rs  validator.rs
crates/l1-bridge/: Cargo.toml
crates/l1-bridge/src/: committer.rs  delegator.rs  l1_reader.rs  lib.rs
crates/l1-integration/: Cargo.toml
crates/l1-integration/src/: lib.rs
crates/l2-runtime/: Cargo.toml
crates/l2-runtime/src/: account_store.rs  block_producer.rs  callback.rs  lib.rs  persistence.rs  processor.rs
crates/l2-runtime/src/tests/: join_world_test.rs  mod.rs
crates/rpc-server/: Cargo.toml
crates/rpc-server/src/: game_handler.rs  http_server.rs  lib.rs  methods.rs  subscriptions.rs  ws_server.rs
crates/secp256r1-stub/: Cargo.toml
crates/secp256r1-stub/src/: lib.rs
crates/validator/: Cargo.toml
crates/validator/src/: config.rs  main.rs
crates/world-program/: Cargo.toml
crates/world-program/src/: builtin.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
