[package]
name = "l2-consensus"
version = "0.1.0"
edition = "2021"
description = "Leader-based consensus with validator broadcast for SVM L2"

[dependencies]
# Solana SDK for types
solana-sdk = { workspace = true }

# Serialization
borsh = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Networking
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Utilities
tracing = { workspace = true }
thiserror = "1.0"
blake3 = "1.5"
parking_lot = { workspace = true }
anyhow = { workspace = true }
