[package]
name = "l1-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Solana (no solana-client to avoid OpenSSL on Windows)
solana-sdk.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Workspace
l1-integration.workspace = true
