[package]
name = "l2-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# SVM
solana-svm.workspace = true
solana-sdk.workspace = true
solana-program.workspace = true
solana-program-runtime.workspace = true
solana-compute-budget.workspace = true
solana-system-program.workspace = true
solana-bpf-loader-program.workspace = true
solana-loader-v4-program.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true

# Serialization
borsh.workspace = true
bincode.workspace = true
serde.workspace = true

# Persistence
sled = "0.34"

# Logging
tracing.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Workspace crates
world-program.workspace = true

[dev-dependencies]
tempfile = "3"
