[package]
name = "solana-secp256r1-program"
version = "2.2.4"
edition = "2021"
description = "Stub for solana-secp256r1-program to avoid OpenSSL dependency on Windows"

[dependencies]
# Use individual solana crates to avoid cycle with solana-sdk
solana-pubkey = "=2.1.0"
solana-instruction = "=2.1.0"
solana-feature-set = "=2.1.0"
solana-precompile-error = "=2.1.0"
bytemuck = { version = "1.24", features = ["derive"] }
thiserror = "1.0"
